--- a/resurse/css/table.css
+++ b/resurse/css/table.css
@@ -15,7 +15,7 @@
     
     caption-side: bottom;
     display: block;
-    width: 700px;
+    width: max-content;
     border-spacing: 0;
     text-align: center;
 
