--- a/resurse/css/produse.css
+++ b/resurse/css/produse.css
@@ -7,6 +7,12 @@
     row-gap: 3rem;
 }
 
+#produse h2 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-top: 2rem;
+}
+
 #containter-inp-check label{
     /* display: block; */
     text-transform: capitalize;
@@ -82,95 +88,88 @@
     font-weight: normal;
 }
 
-/* .numeFiltru{
+.numeFiltru{
     position: relative;
-    padding: 1rem 0;
-} */
+    margin: 0.5rem 0 1rem 0;
+    padding-bottom: 0.5rem;
+    font-weight: 600;
+    color: #435360;
+}
 
-/* .numeFiltru::after{
+.numeFiltru::after{
     position: absolute;
     bottom: 0;
     left: 0;
     content: "";
-    width: 200px;
+    width: 100%;
     height: 3px;
-    background-color: pink;
-} */
-
-
-#inp-nume, #i_datalist, #i_textarea, #inp-categorie {
-    border-radius: 1rem;
-    height: 1.8rem;
-    padding: 0 10px;
-    border: 1px solid #B1B6A5;
-    background-color: white;
+    border-radius: 3px;
+    opacity: 0.3;
+    background-color: #A1B1BA;
 }
-
-#i_sel_multiplu {
-    padding: 0 10px;
-    background-color: transparent;
-    border: none;
-    /* box-shadow: 0 0 0.3rem #B1B6A5; */
-
-    border: 1px solid #B1B6A5;
-    background-color: white;
-}
-
-/* #i_sel_multiplu:focus{
-    background-color: transparent;
-    border: none;
-    outline: none;
-} */
-
-
-#i_sel_multiplu option {
-    padding: 0.2rem;
-    color: var(--culoare-text);
-}
-
 
 #butoaneFiltrare{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
-
-#inp-nume:focus, #i_datalist:focus, #i_textarea:focus, #inp-categorie:focus, #i_sel_multiplu:focus{
-    outline: none;
-    box-shadow: 0 0 0.3rem #B1B6A5;
+#butoaneFiltrare > button div{
+    display: inline;
 }
 
-/* #i_sel_multiplu::-webkit-scrollbar {
-    width: 7px;
+#butoaneFiltrare > div {
+    display: inline-block;
 }
 
-#i_sel_multiplu::-webkit-scrollbar-thumb {
-    background: #B1B6A5;
-    border-radius: 10px;
-} */
+#inp-pret {
+    width: 280px;
+    display: inline-block;
+    margin: 0 1rem;
+}
 
+#containerPret {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#infoRange{
+    margin-left: 0.5rem;
+    width: 85px;
+}
+
+.row > div {
+    padding-left: 0;
+    padding-right: 0;
+    display: flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.row > div > label, .filtru {
+    width: 300px;
+    transition: width 0.7s linear;
+}
+
+#labelPret {
+    width: fit-content;
+}
+
+main .form-select {
+    padding-right: 0;
+}
+
+main .row{
+    /* margin-left: 0;
+    margin-right: 0; */
+    margin: 1rem 0;
+}
 
 .val-categorie, #inp-categorie{
     text-transform: capitalize;
 }
-
-/* input[type="range"] {
-    -webkit-appearance: none;
-    margin-right: 15px;
-    width: 150px;
-    height: 8px;
-    background: #D9DBD3 ;
-    border-radius: 5px;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    background: #B1B6A5;
-} */
 
 /* .produs i {
     display: none;
@@ -185,16 +184,10 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .val-descriere{
-    /* display: block; */
-    /* text-align: justify; */
-    /* overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical; */
     font-size: 90%;
 }
 
-@media screen and (max-width:1100px){
+@media screen and (max-width:1000px){
     .grid-produse{
         display: block;
     }
@@ -203,6 +196,13 @@ input[type="range"]::-webkit-slider-thumb {
         width: 70%;
         margin: 0 auto;
         margin-bottom: 3em;
+    }
+    
+    #butoaneFiltrare > button div {
+        display: none;
+    }
+    #butoaneFiltrare > button i {
+        font-size: 1.5rem;
     }
 }
 
@@ -214,5 +214,9 @@ input[type="range"]::-webkit-slider-thumb {
 
     .produs figure {
         height: 250px;
+    }
+
+    .row > div > label, .filtru {
+        width: 190px;
     }
 }
