--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -20,6 +20,7 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
 
 <link rel="stylesheet" href="/resurse/css/biblioteci/bootstrap-custom.css">
@@ -39,3 +40,4 @@
 
 <script src="/resurse/js/tema.js"></script>
 <script src="/resurse/js/cookies.js"></script>
+<script src="/resurse/js/meniu.js"></script>
