--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -206,12 +206,12 @@
                         </h3>
 
                         <div id="citat">
-                            <div>
+                            <div id="q-dr">
                                 <img src="/resurse/imagini/quote-dr.png" alt="quote-dr">
                                 <hr>
                             </div>
                             <q> Știai că acum sunt mai mulți oameni vii pe pământ decât au fost vreodată? Adică, dacă ar vrea toți să-l joace pe Hamlet în același timp, n-ar putea, pentru că n-ar fi destule cranii!</q>
-                            <div>
+                            <div id="q-st">
                                 <hr>
                                 <img src="/resurse/imagini/quote-st.png" alt="quote-st">
                             </div>
