--- a/views/pagini/produse.ejs
+++ b/views/pagini/produse.ejs
@@ -96,11 +96,11 @@
             </div>
 
             <p id="butoaneFiltrare">
-                <button class="btn btn-primary" id="filtrare"> <i class="bi bi-funnel"></i> <div> Filtreaza </div></button>
+                <button class="btn btn-secondary" id="filtrare"> <i class="bi bi-funnel"></i> <div> Filtreaza </div></button>
                 <button class="btn btn-secondary" id="resetare"> <i class="bi bi-x-circle"></i> <div> Reseteaza </div></button>
-                <button  class="btn btn-secondary" id="sortCrescNume"> <i class="bi bi-sort-down-alt"></i> <div>Sortează crescător  Autor&Preț</div></button>
-                <button class="btn btn-secondary" id="sortDescrescNume"> <i class="bi bi-sort-down"></i> <div>Sorteaza descrescător Autor&Preț</div></button>
-                <button class="btn btn-primary" id="calculare"><i class="bi bi-calculator"></i> <div> Calculare </div></button>
+                <button  class="btn btn-secondary" id="sortCrescNume"> <i class="bi bi-sort-down-alt"></i> <div>Sortează crescător</div></button>
+                <button class="btn btn-secondary" id="sortDescrescNume"> <i class="bi bi-sort-down"></i> <div>Sortează descrescător</div></button>
+                <button class="btn btn-secondary" id="calculare"><i class="bi bi-calculator"></i> <div> Calculare </div></button>
             </p>
             
             <!-- <p id="p-suma">Apăsați Alt+"c" pentru suma preturilor produselor afișate. </p> -->
