--- a/resurse/css/biblioteci/bootstrap-custom.css
+++ b/resurse/css/biblioteci/bootstrap-custom.css
@@ -32,7 +32,7 @@
   --bs-primary: #435360;
   --bs-secondary: #D9DBD3;
   --bs-success: #198754;
-  --bs-info: #EAD6D8;
+  --bs-info: #CFA0A5;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
@@ -40,7 +40,7 @@
   --bs-primary-rgb: 67, 83, 96;
   --bs-secondary-rgb: 217, 219, 211;
   --bs-success-rgb: 25, 135, 84;
-  --bs-info-rgb: 234, 214, 216;
+  --bs-info-rgb: 207, 160, 165;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
@@ -1850,13 +1850,13 @@ progress {
 
 .table-info {
   --bs-table-color: #000;
-  --bs-table-bg: #fbf7f7;
-  --bs-table-border-color: #e2dede;
-  --bs-table-striped-bg: #eeebeb;
+  --bs-table-bg: #f5eced;
+  --bs-table-border-color: #ddd4d5;
+  --bs-table-striped-bg: #e9e0e1;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e2dede;
+  --bs-table-active-bg: #ddd4d5;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e8e4e4;
+  --bs-table-hover-bg: #e3dadb;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2854,19 +2854,19 @@ textarea.form-control-lg {
 
 .btn-info {
   --bs-btn-color: #000;
-  --bs-btn-bg: #EAD6D8;
-  --bs-btn-border-color: #EAD6D8;
+  --bs-btn-bg: #CFA0A5;
+  --bs-btn-border-color: #CFA0A5;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #eddcde;
-  --bs-btn-hover-border-color: #ecdadc;
-  --bs-btn-focus-shadow-rgb: 199, 182, 184;
+  --bs-btn-hover-bg: #d6aeb3;
+  --bs-btn-hover-border-color: #d4aaae;
+  --bs-btn-focus-shadow-rgb: 176, 136, 140;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #eedee0;
-  --bs-btn-active-border-color: #ecdadc;
+  --bs-btn-active-bg: #d9b3b7;
+  --bs-btn-active-border-color: #d4aaae;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #EAD6D8;
-  --bs-btn-disabled-border-color: #EAD6D8;
+  --bs-btn-disabled-bg: #CFA0A5;
+  --bs-btn-disabled-border-color: #CFA0A5;
 }
 
 .btn-warning {
@@ -2989,19 +2989,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-info {
-  --bs-btn-color: #EAD6D8;
-  --bs-btn-border-color: #EAD6D8;
+  --bs-btn-color: #CFA0A5;
+  --bs-btn-border-color: #CFA0A5;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #EAD6D8;
-  --bs-btn-hover-border-color: #EAD6D8;
-  --bs-btn-focus-shadow-rgb: 234, 214, 216;
+  --bs-btn-hover-bg: #CFA0A5;
+  --bs-btn-hover-border-color: #CFA0A5;
+  --bs-btn-focus-shadow-rgb: 207, 160, 165;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #EAD6D8;
-  --bs-btn-active-border-color: #EAD6D8;
+  --bs-btn-active-bg: #CFA0A5;
+  --bs-btn-active-border-color: #CFA0A5;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #EAD6D8;
+  --bs-btn-disabled-color: #CFA0A5;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #EAD6D8;
+  --bs-btn-disabled-border-color: #CFA0A5;
   --bs-gradient: none;
 }
 
@@ -4641,12 +4641,12 @@ textarea.form-control-lg {
 }
 
 .alert-info {
-  --bs-alert-color: #5e5656;
-  --bs-alert-bg: #fbf7f7;
-  --bs-alert-border-color: #f9f3f3;
+  --bs-alert-color: #7c6063;
+  --bs-alert-bg: #f5eced;
+  --bs-alert-border-color: #f1e3e4;
 }
 .alert-info .alert-link {
-  color: #4b4545;
+  color: #634d4f;
 }
 
 .alert-warning {
@@ -5020,17 +5020,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-info {
-  color: #5e5656;
-  background-color: #fbf7f7;
+  color: #7c6063;
+  background-color: #f5eced;
 }
 .list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
-  color: #5e5656;
-  background-color: #e2dede;
+  color: #7c6063;
+  background-color: #ddd4d5;
 }
 .list-group-item-info.list-group-item-action.active {
   color: #fff;
-  background-color: #5e5656;
-  border-color: #5e5656;
+  background-color: #7c6063;
+  border-color: #7c6063;
 }
 
 .list-group-item-warning {
@@ -6622,7 +6622,7 @@ textarea.form-control-lg {
 
 .text-bg-info {
   color: #000 !important;
-  background-color: RGBA(234, 214, 216, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(207, 160, 165, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-warning {
@@ -6667,10 +6667,10 @@ textarea.form-control-lg {
 }
 
 .link-info {
-  color: #EAD6D8 !important;
+  color: #CFA0A5 !important;
 }
 .link-info:hover, .link-info:focus {
-  color: #eedee0 !important;
+  color: #d9b3b7 !important;
 }
 
 .link-warning {
