--- a/resurse/css/produse.css
+++ b/resurse/css/produse.css
@@ -79,7 +79,7 @@
 }
 
 .produs p {
-    color: #C2878D;
+    color: var(--culoare-detalii-produs);
     font-weight: bold;
 }
 
@@ -93,7 +93,7 @@
     margin: 0.5rem 0 1rem 0;
     padding-bottom: 0.5rem;
     font-weight: 600;
-    color: #435360;
+    color: var(--culoare-nume-filtru);
 }
 
 .numeFiltru::after{
@@ -161,6 +161,20 @@ main .form-select {
     padding-right: 0;
 }
 
+.dark .form-control, .dark .form-select {
+    background-color: var(--culoare-bg-input);
+    border: var(--culoare-bg-input);
+    color: #FAFBF7;
+}
+
+.dark .form-control:focus, .dark .form-select:focus {
+    color: #FAFBF7;
+    background-color: var(--culoare-bg-input);
+    border-color: #a1a9b0;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgb(255 255 255 / 25%);
+}
+
 main .row{
     /* margin-left: 0;
     margin-right: 0; */
@@ -218,5 +232,11 @@ main .row{
 
     .row > div > label, .filtru {
         width: 190px;
+    }
+}
+
+@media screen and (max-width: 500px){
+    #inp-pret {
+        width: 150px;
     }
 }
