--- a/resurse/scss/customizare-bootstrap.scss
+++ b/resurse/scss/customizare-bootstrap.scss
@@ -1,7 +1,7 @@
 @use '../../node_modules/bootstrap/scss/bootstrap.scss' with (
     $primary: #435360,
     $secondary: #D9DBD3,
-    $info:#EAD6D8,
+    $info:#CFA0A5,
     $body-color: black,
     $grid-breakpoints: (
     xs: 0,
