Corectare erori pagina produse

--- a/views/pagini/produs.ejs
+++ b/views/pagini/produs.ejs
@@ -34,7 +34,7 @@
                             <div>
                                 <div class="numeCarac">Categorie:&nbsp;</div>
                                 <div class="iconDen">
-                                    <i class="fa-brands fa-buffer"></i>
+                                    <i class="fa-solid fa-book"></i>
                                 </div>
                                 <div class="infoCarac"> 
                                     <%-locals.prod.categorie%>
@@ -44,7 +44,7 @@
                             <div>
                                 <div class="numeCarac">Tip Copertă:&nbsp;</div>
                                 <div class="iconDen">
-                                    <i class="fa-solid fa-book"></i>
+                                    <i class="fa-solid fa-paperclip"></i>
                                 </div>
                                 <div class="infoCarac"> 
                                     <%-locals.prod.tip_coperta%>
